--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node examples/main.ts"
+    "dev": "node -r ts-node/register --env-file=.env examples/main.ts"
   },
   "keywords": [
     "discord",
@@ -27,7 +27,6 @@
   "devDependencies": {
     "@types/node": "^24.5.2",
     "@types/ws": "^8.18.1",
-    "dotenv": "^17.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
