--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hieuxyz/rpc",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A Discord Rich Presence library for Node.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,6 +16,10 @@
     "lint:fix": "eslint \"src/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"examples/**/*.ts\""
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hieuxyz00/hieuxyz_rpc.git"
+  },
   "keywords": [
     "discord",
     "rpc",
@@ -23,6 +27,10 @@
   ],
   "author": "hieuxyz",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hieuxyz00/hieuxyz_rpc/issues"
+  },
+  "homepage": "https://github.com/hieuxyz00/hieuxyz_rpc#readme",
   "dependencies": {
     "axios": "^1.12.2",
     "ws": "^8.18.3"
